chore: refactor for code quality and cleanup logic
- Rename `main()` to `isMain()` across classes and tests for better clarity.
- Refactor `DownstreamClientException` to use a switch expression for mapping HTTP status codes to problem catalogs.
- Simplify `AggregationPartResultApplicator` by removing a redundant helper method and using `Optional.equals()`.
- Remove unused methods, fields, and imports in `AggregationContext`, `AggregationPartGraph`, and `AggregationPartResultApplicator`.
- Clean up redundant `@NonNull` and `@Nullable` annotations and remove unnecessary intermediate variables.
- Update tests to use `getFirst()` and simplify `StepVerifier` assertions.